@@ -1,3 +1,7 @@
+Tue Aug 24 14:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* WebServer.[hm]: Add support for HTTP/1.1 persistent connections.
+
 Sun Aug 22 10:35:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* SQLClient.[hm]: Add ([SQLRecord-dictionary]) and tidy/comment the
